--- a/large_graph.conf
+++ b/large_graph.conf
@@ -1,29 +1,28 @@
 [data]
 seed = 1
-dataset = corafull
+dataset = ogbn-products
 valid_ratio = 0.2
 test_ratio = 0.2
-# num_parts = 15000
-num_parts = 1
+num_parts = 15000
+# num_parts = 6000
 
 [training]
 train_ratio = 0.6
 # batch_size = 1024
-batch_size = 1 
+batch_size = 128
 [model]
 model = GCN_GW
-gnn_hidden_dim = 128
+gnn_hidden_dim = 512
 num_layers = 2
-epoch = 500
-lr = 0.01
+epoch = 1000
+lr = 0.001
 init_memory = False
 gw_ratio = 0.3
-emb_dim=128
+emb_dim= 128
 shared_memory_attention = True
-shared_memory_percentage = 0.4
-mem_slots = 64
+mem_slots = 16
 encoder_attention_heads = 8
-encoder_embed_dim =  128
+encoder_embed_dim =  512
 encoder_ffn_embed_dim = 256
 attention_dropout = 0.3
 topk_ratio = 1.0
@@ -45,5 +44,5 @@ num_steps = 5
 log_step = 20
 log_dir=experiments_rebuttal
 plot = False
-debug = False
+debug = True
 device = cuda:2
